--- a/source/index.html
+++ b/source/index.html
@@ -3,10 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
+    <header class="page-header">
+      <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
+      <nav class="main-nav">
+        <button class="main-nav__button" type="button" name="open"></button>
+        <ul class="main-nav__list cite-nav">
+          <li class="cite-nav__item cite-nav__item--active"><a>ГЛАВНАЯ</a></li>
+          <li class="cite-nav__item"><a href="gallery.html">ФОТО И ВИДЕО</a></li>
+          <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
+          <li class="cite-nav__item"><a href="https://htmlacademy.ru" target="_blank">HTML ACADEMY</a></li>
+        </ul>
+        <button class="main-nav__button close-button" type="button" name="close"></button>
+      </nav>
+    </header>
+    <main class="page-main">
+      <h1 class="visually-hidden">Седона - американский город в Аризоне</h1>
+      <img class="page-main__background-img" src="#" width="" height="" alt="пейзаж седоны">
+      <section class="reasons">
+        <h2 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
+        <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <div class="reasons__reason-item">
+          <h3>Настоящий городок</h3>
+          <span>-№1-</span>
+          <p>СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
