--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
           <li class="cite-nav__item cite-nav__item--active"><a>ГЛАВНАЯ</a></li>
           <li class="cite-nav__item"><a href="gallery.html">ФОТО И ВИДЕО</a></li>
           <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
-          <li class="cite-nav__item"><a href="https://htmlacademy.ru" target="_blank">HTML ACADEMY</a></li>
+          <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
         </ul>
         <button class="main-nav__button close-button visually-hidden" type="button" name="close"></button>
       </nav>
@@ -76,6 +76,20 @@
       </section>
     </main>
     <footer class="page-footer">
+      <section class="map">
+        <h4 class="visually-hidden">Карта</h4>
+        <img class="map__img" src="#" alt="карта">
+      </section>
+      <section class="social">
+        <h4 class="visually-hidden">Контакты в социальных сетях</h4>
+        <b class="social__tag">#visitsedona</b>
+        <ul class="social__list">
+          <li class="social__social-item social-item__twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
+          <li class="social__social-item social-item__fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
+          <li class="social__social-item social-item__youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+        </ul>
+      </section>
+      <p class="developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
     </footer>
   </body>
 </html>
