--- a/source/index.html
+++ b/source/index.html
@@ -80,16 +80,16 @@
         <h4 class="visually-hidden">Карта</h4>
         <img class="map__img" src="#" alt="карта">
       </section>
-      <section class="social">
+      <section class="contacts">
         <h4 class="visually-hidden">Контакты в социальных сетях</h4>
-        <b class="social__tag">#visitsedona</b>
-        <ul class="social__list">
-          <li class="social__social-item social-item__twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
-          <li class="social__social-item social-item__fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
-          <li class="social__social-item social-item__youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+        <b class="contacts__tag">#visitsedona</b>
+        <ul class="contacts__list">
+          <li class="contacts__social-item social-item__twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
+          <li class="contacts__social-item social-item__fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
+          <li class="contacts__social-item social-item__youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
         </ul>
+        <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
       </section>
-      <p class="developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
     </footer>
   </body>
 </html>
