--- a/source/index.html
+++ b/source/index.html
@@ -26,45 +26,45 @@
       <section class="reasons">
         <h2 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
         <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-        <ul class="reasons__list">
-          <li class="reasons__reason-item background-blue">
-            <h3 class="reason-item__title">Настоящий городок</h3>
-            <span class="reason-item__number">-№1-</span>
-            <p class="reason-item__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-            <img class="reason-item__img" src="#" width="" height="" alt="отель">
+        <ul class="reasons__list reasons-list">
+          <li class="reasons-list__item background-blue">
+            <h3 class="reasons-list__title">Настоящий городок</h3>
+            <span class="reasons-list__number">-№1-</span>
+            <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+            <img class="reasons-list__img" src="#" width="" height="" alt="отель">
           </li>
-          <li class="reasons__reason-item add-info">
+          <li class="reasons-list__item add-info">
             <h3 class="add-info__title">Жилье</h3>
             <p class="add-info__description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
           </li>
-          <li class="reasons__reason-item add-info">
+          <li class="reasons-list__item add-info">
             <h3 class="add-info__title">Сувениры</h3>
             <p class="add-info__description">Не только китайского, но и местного производства</p>
           </li>
-          <li class="reasons__reason-item add-info">
+          <li class="reasons-list__item add-info">
             <h3 class="add-info__title">Еда</h3>
             <p class="add-info__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
           </li>
-          <li class="reasons__reason-item background-blue">
-            <h3 class="reason-item__title">Там есть мост дьявола</h3>
-            <span class="reason-item__number">-№2-</span>
-            <p class="reason-item__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img class="reason-item__img" src="#" width="" height="" alt="мост дьявола">
+          <li class="reasons-list__item background-blue">
+            <h3 class="reasons-list__title">Там есть мост дьявола</h3>
+            <span class="reasons-list__number">-№2-</span>
+            <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <img class="reasons-list__img" src="#" width="" height="" alt="мост дьявола">
           </li>
-          <li class="reasons__reason-item">
-            <h3 class="reason-item__title">Небольшая площадь</h3>
-            <span class="reason-item__number">-№3-</span>
-            <p class="reason-item__description">Все интересные места находятся очень близко</p>
+          <li class="reasons-list__item">
+            <h3 class="reasons-list__title">Небольшая площадь</h3>
+            <span class="reasons-list__number">-№3-</span>
+            <p class="reasons-list__description">Все интересные места находятся очень близко</p>
           </li>
-          <li class="reasons__reason-item">
-            <h3 class="reason-item__title">Красивая дорога</h3>
-            <span class="reason-item__number">-№4-</span>
-            <p class="reason-item__description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
+          <li class="reasons-list__item">
+            <h3 class="reasons-list__title">Красивая дорога</h3>
+            <span class="reasons-list__number">-№4-</span>
+            <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
           </li>
-          <li class="reasons__reason-item">
-            <h3 class="reason-item__title">Мало туристов</h3>
-            <span class="reason-item__number">-№5-</span>
-            <p class="reason-item__description">Большинство едет в Гранд Каньон и толпится там</p>
+          <li class="reasons-list__item">
+            <h3 class="reasons-list__title">Мало туристов</h3>
+            <span class="reasons-list__number">-№5-</span>
+            <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
         <section class="hotel-request">
@@ -83,10 +83,10 @@
       <section class="contacts">
         <h4 class="visually-hidden">Контакты в социальных сетях</h4>
         <b class="contacts__tag">#visitsedona</b>
-        <ul class="contacts__list">
-          <li class="contacts__social-item social-item__twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
-          <li class="contacts__social-item social-item__fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
-          <li class="contacts__social-item social-item__youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+        <ul class="contacts__list social-list">
+          <li class="social-list__item social-list__twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
+          <li class="social-list__item social-list__fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
+          <li class="social-list__item social-list__youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
         </ul>
         <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
       </section>
