--- a/source/gallery.html
+++ b/source/gallery.html
@@ -17,7 +17,7 @@
           <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
           <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
         </ul>
-        <button class="main-nav__button close-button visually-hidden" type="button" name="close"></button>
+        <button class="visually-hidden" type="button" name="close"></button>
       </nav>
     </header>
     <main class="page-main">
@@ -58,11 +58,11 @@
     </main>
     <footer class="page-footer">
       <section class="map">
-        <h4 class="visually-hidden">Карта</h4>
+        <h2 class="visually-hidden">Карта</h4>
         <img class="map__img" src="#" alt="карта">
       </section>
       <section class="contacts">
-        <h4 class="visually-hidden">Контакты в социальных сетях</h4>
+        <h2 class="visually-hidden">Контакты в социальных сетях</h4>
         <b class="contacts__tag">#visitsedona</b>
         <ul class="contacts__list social-list">
           <li class="social-list__item social-list__twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
