--- a/source/index.html
+++ b/source/index.html
@@ -17,58 +17,57 @@
           <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
           <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
         </ul>
-        <button class="main-nav__button close-button visually-hidden" type="button" name="close"></button>
+        <button class="visually-hidden" type="button" name="close"></button>
       </nav>
     </header>
     <main class="page-main">
-      <h1 class="visually-hidden">Седона - американский город в Аризоне</h1>
       <img class="page-main__background-img" src="#" width="" height="" alt="пейзаж седоны">
       <section class="reasons">
-        <h2 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
+        <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
         <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul class="reasons__list reasons-list">
           <li class="reasons-list__item background-blue">
-            <h3 class="reasons-list__title">Настоящий городок</h3>
+            <h2 class="reasons-list__title">Настоящий городок</h3>
             <span class="reasons-list__number">-№1-</span>
             <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
             <img class="reasons-list__img" src="#" width="" height="" alt="отель">
           </li>
           <li class="reasons-list__item add-info">
-            <h3 class="add-info__title">Жилье</h3>
+            <h2 class="add-info__title">Жилье</h3>
             <p class="add-info__description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
           </li>
           <li class="reasons-list__item add-info">
-            <h3 class="add-info__title">Сувениры</h3>
+            <h2 class="add-info__title">Сувениры</h3>
             <p class="add-info__description">Не только китайского, но и местного производства</p>
           </li>
           <li class="reasons-list__item add-info">
-            <h3 class="add-info__title">Еда</h3>
+            <h2 class="add-info__title">Еда</h3>
             <p class="add-info__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
           </li>
           <li class="reasons-list__item background-blue">
-            <h3 class="reasons-list__title">Там есть мост дьявола</h3>
+            <h2 class="reasons-list__title">Там есть мост дьявола</h3>
             <span class="reasons-list__number">-№2-</span>
             <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             <img class="reasons-list__img" src="#" width="" height="" alt="мост дьявола">
           </li>
           <li class="reasons-list__item">
-            <h3 class="reasons-list__title">Небольшая площадь</h3>
+            <h2 class="reasons-list__title">Небольшая площадь</h3>
             <span class="reasons-list__number">-№3-</span>
             <p class="reasons-list__description">Все интересные места находятся очень близко</p>
           </li>
           <li class="reasons-list__item">
-            <h3 class="reasons-list__title">Красивая дорога</h3>
+            <h2 class="reasons-list__title">Красивая дорога</h3>
             <span class="reasons-list__number">-№4-</span>
             <p class="reasons-list__description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
           </li>
           <li class="reasons-list__item">
-            <h3 class="reasons-list__title">Мало туристов</h3>
+            <h2 class="reasons-list__title">Мало туристов</h3>
             <span class="reasons-list__number">-№5-</span>
             <p class="reasons-list__description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
         <section class="hotel-request">
-          <h2 class="visually-hidden">Найти гостиницу в Седоне</h2>
+          <h3 class="visually-hidden">Найти гостиницу в Седоне</h2>
           <b class="hotel-request__title">Заинтересовались?</b>
           <p class="hotel-request__text">Укажите предполагаемые даты поездки, и мы и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <a class="hotel-request__link" href="#">Найти гостиницу</a>
