--- a/source/gallery.html
+++ b/source/gallery.html
@@ -45,7 +45,7 @@
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото4"></a>
             <p class="pictures-list__name">Мост дьявола</p>
             <p class="pictures-list__author">Автор фото: Антон</p>
-          </li>      
+          </li>
         </ul>
         <ul class="gallery__list video-list">
           <li class="video-list__item">
@@ -54,20 +54,16 @@
             <video class="video-list__clip" width="" height="" src="#">
           </li>
         </ul>
-      </section>  
+      </section>
     </main>
     <footer class="page-footer">
-      <section class="map">
-        <h2 class="visually-hidden">Карта</h4>
-        <img class="map__img" src="#" alt="карта">
-      </section>
       <section class="contacts">
         <h2 class="visually-hidden">Контакты в социальных сетях</h4>
         <b class="contacts__tag">#visitsedona</b>
         <ul class="contacts__list social-list">
-          <li class="social-list__item social-list__twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
-          <li class="social-list__item social-list__fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
-          <li class="social-list__item social-list__youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+          <li class="social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
+          <li class="social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
+          <li class="social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
         </ul>
         <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
       </section>
