--- a/source/index.html
+++ b/source/index.html
@@ -10,14 +10,14 @@
     <header class="page-header">
       <a class="page-header__logo"><img class="page-header__logo-img" src="#" width="" height="" alt="логотип"></a>
       <nav class="main-nav">
-        <button class="main-nav__button" type="button" name="open"></button>
+        <button class="main-nav__open-button" type="button"></button>
         <ul class="main-nav__list cite-nav">
           <li class="cite-nav__item cite-nav__item--active"><a>ГЛАВНАЯ</a></li>
           <li class="cite-nav__item"><a href="gallery.html">ФОТО И ВИДЕО</a></li>
           <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
           <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
         </ul>
-        <button class="visually-hidden" type="button" name="close"></button>
+        <button class="main-nav__close-button visually-hidden" type="button"></button>
       </nav>
     </header>
     <main class="page-main">
@@ -26,28 +26,28 @@
         <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
         <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul class="reasons__list reasons-list">
-          <li class="reasons-list__item background-blue">
-            <h2 class="reasons-list__title">Настоящий городок</h3>
-            <span class="reasons-list__number">-№1-</span>
-            <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+          <li class="reasons-list__item--bg-blue">
+            <h2 class="reasons-list__bg-blue-title">Настоящий городок</h3>
+            <span class="reasons-list__bg-blue-number">-№1-</span>
+            <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
             <img class="reasons-list__img" src="#" width="" height="" alt="отель">
           </li>
-          <li class="reasons-list__item add-info">
-            <h2 class="add-info__title">Жилье</h3>
-            <p class="add-info__description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
+          <li class="reasons-list__item--add-info">
+            <h2 class="reasons-list__add-info-title">Жилье</h3>
+            <p class="reasons-list__add-info-description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
           </li>
-          <li class="reasons-list__item add-info">
-            <h2 class="add-info__title">Сувениры</h3>
+          <li class="reasons-list__item--add-info">
+            <h2 class="reasons-list__add-info-title">Сувениры</h3>
             <p class="add-info__description">Не только китайского, но и местного производства</p>
           </li>
-          <li class="reasons-list__item add-info">
-            <h2 class="add-info__title">Еда</h3>
-            <p class="add-info__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+          <li class="reasons-list__item--add-info">
+            <h2 class="reasons-list__add-info-title">Еда</h3>
+            <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
           </li>
-          <li class="reasons-list__item background-blue">
-            <h2 class="reasons-list__title">Там есть мост дьявола</h3>
-            <span class="reasons-list__number">-№2-</span>
-            <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <li class="reasons-list__item--bg-blue">
+            <h2 class="reasons-list__bg-blue-title">Там есть мост дьявола</h3>
+            <span class="reasons-list__bg-blue-number">-№2-</span>
+            <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             <img class="reasons-list__img" src="#" width="" height="" alt="мост дьявола">
           </li>
           <li class="reasons-list__item">
@@ -83,9 +83,9 @@
         <h4 class="visually-hidden">Контакты в социальных сетях</h4>
         <b class="contacts__tag">#visitsedona</b>
         <ul class="contacts__list social-list">
-          <li class="social-list__item social-list__twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
-          <li class="social-list__item social-list__fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
-          <li class="social-list__item social-list__youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+          <li class="social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
+          <li class="social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
+          <li class="social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
         </ul>
         <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
       </section>
