main-header added

--- a/source/gallery.html
+++ b/source/gallery.html
@@ -21,7 +21,9 @@
       </nav>
     </header>
     <main class="page-main">
-      <img class="page-main__background-img" src="#" width="" height="" alt="пейзаж седоны">
+      <header class="page-main__header gallery-main-header">
+        <img class="gallery-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
+      </header>
       <section class="gallery">
         <h1 class="gallery__title">Фото и видео</h1>
         <p class="gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике</p>
