--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,9 @@
       </nav>
     </header>
     <main class="page-main">
-      <img class="page-main__background-img" src="#" width="" height="" alt="пейзаж седоны">
+      <header class="page-main__header index-main-header">
+        <img class="index-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
+      </header>
       <section class="reasons">
         <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
         <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
