--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,9 @@
       </nav>
     </header>
     <main class="page-main">
-      <img class="page-main__background-img" src="#" width="" height="" alt="пейзаж седоны">
+      <header class="page-main__header form-main-header">
+        <img class="form-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
+      </header>
       <section class="form">
         <h1 class="form__title">Оставьте свой отзыв</h1>
         <p class="form__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
