--- a/source/form.html
+++ b/source/form.html
@@ -90,7 +90,7 @@
           </div>
           <div class="feedback__form comments-form">
             <label class="comments-form__input-label" for="comments">Опишите свои эмоции:</label>
-            <textarea class="comments-form__input" id="comments" name="commentsfield" rows="8" cols="25">Опишите подробно все свои восторги</textarea>
+            <textarea class="comments-form__input" id="comments" name="commentsfield">Опишите подробно все свои восторги</textarea>
           </div>
           <button class="feedback__button" type="submit" name="submit-button">Отправить отзыв</button>
         </form>
