--- a/source/gallery.html
+++ b/source/gallery.html
@@ -32,28 +32,35 @@
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото1"></a>
             <p class="pictures-list__name">Народные просторы</p>
             <p class="pictures-list__author">Автор фото: Борис</p>
+            <span class="pictures-list__likes"></span>
           </li>
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото2"></a>
             <p class="pictures-list__name">Местная растительность</p>
             <p class="pictures-list__author">Автор фото: Сергей</p>
+            <span class="pictures-list__likes"></span>
           </li>
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото3"></a>
             <p class="pictures-list__name">Дорога на север</p>
             <p class="pictures-list__author">Автор фото: Петр</p>
+            <span class="pictures-list__likes"></span>
           </li>
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото4"></a>
             <p class="pictures-list__name">Мост дьявола</p>
             <p class="pictures-list__author">Автор фото: Антон</p>
+            <span class="pictures-list__likes"></span>
           </li>
         </ul>
         <ul class="gallery__list video-list">
           <li class="video-list__item">
             <p class="video-list__title">Все еще сомневайтесь?</p>
             <p class="video-list__description">Смотрите видеопрезентацию, и скорее за билетами, пока они не подорожали в очередной раз!</p>
-            <video class="video-list__clip" width="" height="" src="#">
+            <video class="video-list__clip" width="" height="" src="#" controls>
+            <span class="video-list__back" tabindex="0" aria-label="показать с начала"></span>
+            <span class="video-list__subtitles" tabindex="0" aria-label="показать субтитры"></span>
+            <span class="video-list__large" tabindex="0" aria-label="развернуть на весь экран"></span>
           </li>
         </ul>
       </section>
