--- a/source/form.html
+++ b/source/form.html
@@ -101,9 +101,9 @@
         <h4 class="visually-hidden">Контакты в социальных сетях</h4>
         <b class="contacts__tag">#visitsedona</b>
         <ul class="contacts__list social-list">
-          <li class="social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
-          <li class="social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
-          <li class="social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+          <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
+          <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
+          <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
         </ul>
         <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
       </section>
