--- a/source/index.html
+++ b/source/index.html
@@ -28,25 +28,25 @@
         <h1 class="reasons__title">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
         <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul class="reasons__list reasons-list">
-          <li class="reasons-list__item--bg-blue">
+          <li class="reasons-list__item reasons-list__item--bg-blue">
             <h2 class="reasons-list__bg-blue-title">Настоящий городок</h3>
             <span class="reasons-list__bg-blue-number">-№1-</span>
             <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
             <img class="reasons-list__img" src="#" width="" height="" alt="отель">
           </li>
-          <li class="reasons-list__item--add-info">
+          <li class="reasons-list__item reasons-list__item--add-info">
             <h2 class="reasons-list__add-info-title">Жилье</h3>
             <p class="reasons-list__add-info-description">Рекомендуем пожить в настоящем мотеле. Все как в кино!</p>
           </li>
-          <li class="reasons-list__item--add-info">
+          <li class="reasons-list__item reasons-list__item--add-info">
             <h2 class="reasons-list__add-info-title">Сувениры</h3>
             <p class="add-info__description">Не только китайского, но и местного производства</p>
           </li>
-          <li class="reasons-list__item--add-info">
+          <li class="reasons-list__item reasons-list__item--add-info">
             <h2 class="reasons-list__add-info-title">Еда</h3>
             <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
           </li>
-          <li class="reasons-list__item--bg-blue">
+          <li class="reasons-list__item reasons-list__item--bg-blue">
             <h2 class="reasons-list__bg-blue-title">Там есть мост дьявола</h3>
             <span class="reasons-list__bg-blue-number">-№2-</span>
             <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
@@ -85,9 +85,9 @@
         <h4 class="visually-hidden">Контакты в социальных сетях</h4>
         <b class="contacts__tag">#visitsedona</b>
         <ul class="contacts__list social-list">
-          <li class="social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
-          <li class="social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
-          <li class="social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
+          <li class="social-list__item social-list__item--twitter"><a href="https://twitter.com/" target="_blank">tw</a></li>
+          <li class="social-list__item social-list__item--fb"><a href="https://www.facebook.com/" target="_blank">fb</a></li>
+          <li class="social-list__item social-list__item--youtube"><a href="https://www.youtube.com/" target="_blank">YT</a></li>
         </ul>
         <p class="contacts__developer">разработано<a href="https://htmlacademy.ru/intensive/adaptive"></a></p>
       </section>
