index main styling

--- a/source/index.html
+++ b/source/index.html
@@ -30,9 +30,9 @@
         <p class="reasons__intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <ul class="reasons__list reasons-list">
           <li class="reasons-list__item reasons-list__item--bg-blue">
-            <h2 class="reasons-list__bg-blue-title">Настоящий городок</h3>
-            <span class="reasons-list__bg-blue-number">-№1-</span>
-            <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+            <h2 class="reasons-list__title">Настоящий городок</h3>
+            <span class="reasons-list__number">-№1-</span>
+            <p class="reasons-list__description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
             <img class="reasons-list__img" src="#" width="" height="" alt="отель">
           </li>
           <li class="reasons-list__item reasons-list__item--add-info">
@@ -48,9 +48,9 @@
             <p class="reasons-list__add-info-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
           </li>
           <li class="reasons-list__item reasons-list__item--bg-blue">
-            <h2 class="reasons-list__bg-blue-title">Там есть мост дьявола</h3>
-            <span class="reasons-list__bg-blue-number">-№2-</span>
-            <p class="reasons-list__bg-blue-description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <h2 class="reasons-list__title">Там есть мост дьявола</h3>
+            <span class="reasons-list__number">-№2-</span>
+            <p class="reasons-list__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             <img class="reasons-list__img" src="#" width="" height="" alt="мост дьявола">
           </li>
           <li class="reasons-list__item">
