--- a/source/gallery.html
+++ b/source/gallery.html
@@ -13,8 +13,8 @@
       <nav class="main-nav">
         <button class="main-nav__button" type="button" name="open"></button>
         <ul class="main-nav__list cite-nav">
-          <li class="cite-nav__item cite-nav__item--active"><a>ГЛАВНАЯ</a></li>
-          <li class="cite-nav__item"><a href="gallery.html">ФОТО И ВИДЕО</a></li>
+          <li class="cite-nav__item"><a href="index.html">ГЛАВНАЯ</a></li>
+          <li class="cite-nav__item cite-nav__item--active"><a>ФОТО И ВИДЕО</a></li>
           <li class="cite-nav__item"><a href="form.html">ФОРМА ОТЗЫВА</a></li>
           <li class="cite-nav__item"><a href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML ACADEMY</a></li>
         </ul>
