borders/paddings added

--- a/source/form.html
+++ b/source/form.html
@@ -26,8 +26,10 @@
         <img class="form-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
       </header>
       <section class="form">
-        <h1 class="form__title">Оставьте свой отзыв</h1>
-        <p class="form__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+        <div class="form__wrapper">
+          <h1 class="form__title">Оставьте свой отзыв</h1>
+          <p class="form__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+        </div>
         <form class="feedback" action="https://echo.htmlacademy.ru" method="get">
           <div class="feedback__form introduce-form">
             <label class="introduce-form__label">Представьтесь:</label>
