--- a/source/gallery.html
+++ b/source/gallery.html
@@ -26,32 +26,34 @@
         <img class="gallery-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
       </header>
       <section class="gallery">
-        <h1 class="gallery__title">Фото и видео</h1>
-        <p class="gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике</p>
+        <div class="gallery__wrapper">
+          <h1 class="gallery__title">Фото и видео</h1>
+          <p class="gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике</p>
+        </div>
         <ul class="gallery__list pictures-list">
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото1"></a>
             <p class="pictures-list__name">Народные просторы</p>
             <p class="pictures-list__author">Автор фото: Борис</p>
-            <span class="pictures-list__likes"></span>
+            <span class="pictures-list__likes">1350</span>
           </li>
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото2"></a>
             <p class="pictures-list__name">Местная растительность</p>
             <p class="pictures-list__author">Автор фото: Сергей</p>
-            <span class="pictures-list__likes"></span>
+            <span class="pictures-list__likes">143</span>
           </li>
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото3"></a>
             <p class="pictures-list__name">Дорога на север</p>
             <p class="pictures-list__author">Автор фото: Петр</p>
-            <span class="pictures-list__likes"></span>
+            <span class="pictures-list__likes">96</span>
           </li>
           <li class="pictures-list__item">
             <a class="pictures-list__link" href="#"><img class="pictures-list__img" src="#" width="" height="" alt="фото4"></a>
             <p class="pictures-list__name">Мост дьявола</p>
             <p class="pictures-list__author">Автор фото: Антон</p>
-            <span class="pictures-list__likes"></span>
+            <span class="pictures-list__likes">254</span>
           </li>
         </ul>
         <ul class="gallery__list video-list">
