--- a/source/gallery.html
+++ b/source/gallery.html
@@ -22,7 +22,7 @@
       </nav>
     </header>
     <main class="page-main">
-      <header class="page-main__header gallery-main-header">
+      <header class="page-main__header page-main-header">
         <img class="gallery-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
       </header>
       <section class="gallery">
