--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
       </nav>
     </header>
     <main class="page-main">
-      <header class="page-main__header index-main-header">
+      <header class="page-main__header page-main-header">
         <img class="index-main-header__bg-img" src="#" width="" height="" alt="пейзаж седоны">
       </header>
       <section class="reasons">
@@ -41,7 +41,7 @@
           </li>
           <li class="reasons-list__item reasons-list__item--add-info">
             <h2 class="reasons-list__add-info-title">Сувениры</h3>
-            <p class="add-info__description">Не только китайского, но и местного производства</p>
+            <p class="reasons-list__add-info-description">Не только китайского, но и местного производства</p>
           </li>
           <li class="reasons-list__item reasons-list__item--add-info">
             <h2 class="reasons-list__add-info-title">Еда</h3>
